[package]
name = "carescanner"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
colog = "1.3.0"
futures = "0.3.31"
governor = "0.10.0"
indicatif = "0.17.11"
log = "0.4.27"
rand = "0.9.1"
tokio = { version = "1.45.1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
